# web_scraper

./: Cargo.toml  to_scrape_shopware.json
src/: main.rs
src/data/: mod.rs  plugin.rs  registry.rs  updatable.rs  version.rs
src/scraping/: mod.rs  shopware.rs
