[package]
name = "web_scraper"
version = "0.1.0"
authors = ["Matthias Lodner <matthias.lodner@uni-ulm.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Json
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"

# Scraping
scraper = "0.12.0"
reqwest = { version = "0.10.6", features = ["blocking"] }
select = "0.5.0"
